rename xtext version

--- a/org.lflang/pom.xml
+++ b/org.lflang/pom.xml
@@ -63,17 +63,17 @@
                     <dependency>
                         <groupId>org.eclipse.xtext</groupId>
                         <artifactId>org.eclipse.xtext.common.types</artifactId>
-                        <version>${xtext.version}</version>
+                        <version>${xtextVersion}</version>
                     </dependency>
                     <dependency>
                         <groupId>org.eclipse.xtext</groupId>
                         <artifactId>org.eclipse.xtext.xtext.generator</artifactId>
-                        <version>${xtext.version}</version>
+                        <version>${xtextVersion}</version>
                     </dependency>
                     <dependency>
                         <groupId>org.eclipse.xtext</groupId>
                         <artifactId>org.eclipse.xtext.xbase</artifactId>
-                        <version>${xtext.version}</version>
+                        <version>${xtextVersion}</version>
                     </dependency>
                     <dependency>
                         <groupId>org.eclipse.xtext</groupId>
