--- a/org.lflang/pom.xml
+++ b/org.lflang/pom.xml
@@ -58,7 +58,7 @@
                              See https://www.eclipse.org/Xtext/documentation/350_continuous_integration.html#maven-tycho-hints
                              and https://mvnrepository.com/artifact/org.eclipse.emf/org.eclipse.emf.mwe2.launch -->
                         <!-- This version MUST match the version xtext uses or the build gets stuck -->
-                        <version>2.12.1</version>
+                        <version>${mwe2LaunchVersion}</version>
                     </dependency>
                     <dependency>
                         <groupId>org.eclipse.xtext</groupId>
