--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <!-- Note that this version is forced upon us by https://github.com/JetBrains/kotlin-eclipse -->
         <kotlinVersion>1.4.10</kotlinVersion>
         <lsp4jVersion>0.12.0</lsp4jVersion>
+        <mwe2LaunchVersion>2.12.1</mwe2LaunchVersion>
         <!-- When the Eclipse p2 site is updated to a new version of Eclipse, then update the xtextVersion. -->
         <xtextVersion>2.26.0.M2</xtextVersion>
         <tychoVersion>2.3.0</tychoVersion>
