--- a/org.lflang/pom.xml
+++ b/org.lflang/pom.xml
@@ -49,7 +49,7 @@
                     <dependency>
                         <groupId>commons-cli</groupId>
                         <artifactId>commons-cli</artifactId>
-                        <version>1.4</version>
+                        <version>${commonsCliVersion}</version>
                     </dependency>
                     <dependency>
                         <groupId>org.eclipse.emf</groupId>
