use 1.6.10 for kotlin

--- a/org.lflang/pom.xml
+++ b/org.lflang/pom.xml
@@ -120,6 +120,7 @@
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
+                <version>${kotlinVersion}</version>
             </plugin>
             <plugin>
                 <groupId>org.eclipse.tycho</groupId>
