--- a/org.lflang.ui/pom.xml
+++ b/org.lflang.ui/pom.xml
@@ -34,6 +34,7 @@
         <plugin>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-maven-plugin</artifactId>
+            <version>${kotlinVersion}</version>
         </plugin>
     </plugins>
   </build>
