--- a/.github/workflows/eclipse-tests.yml
+++ b/.github/workflows/eclipse-tests.yml
@@ -7,7 +7,7 @@ jobs:
   run:
     strategy:
       matrix:
-        platform: [ubuntu-latest, macos-latest]
+        platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     steps:
       - name: Setup Java JDK
@@ -17,12 +17,16 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
-      - name: Test templates (Linux/macOS)
+      - name: Build lfc
+        run: |
+          ./gradlew buildLfc
+      - name: Add bin directory to PATH
+        shell: bash
+        run: |
+          cd bin
+          "$(pwd)" >> $GITHUB_PATH
+      - name: Test templates
+        shell: bash
         run: |
           cd org.lflang.ui/src/org/lflang/ui/wizard/templates
           find .  -name *.lf -print0 | xargs -0 -n1 lfc
-        if: ${{ runner.os == 'macOS' || runner.os == 'Linux' }}
-      - name: Test templates (Windows)
-        run: |
-          cd org.lflang.ui/src/org/lflang/ui/wizard/templates
-        if: ${{ runner.os == 'Windows' }}
