--- a/.github/workflows/eclipse-tests.yml
+++ b/.github/workflows/eclipse-tests.yml
@@ -17,6 +17,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2.1.2
+      - name: Install pnpm
+        run: npm i -g pnpm
       - name: Build lfc
         run: |
           ./gradlew buildLfc
