--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
 
   # Run language server tests.
   lsp-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/lsp-tests.yml@release
+    uses: lf-lang/lingua-franca/.github/workflows/lsp-tests.yml@master
 
   # Run the C integration tests.
   c-tests:
