--- a/.github/workflows/cpp-tests.yml
+++ b/.github/workflows/cpp-tests.yml
@@ -36,7 +36,7 @@ jobs:
         if: ${{ inputs.runtime-ref }} 
       - name: Run C++ tests;
         run: |
-          ./gradlew test --tests org.lflang.tests.runtime.CppTest.* --tests org.lflang.tests.lsp.LspTests.lspWithDependenciesTestCpp
+          ./gradlew test --tests org.lflang.tests.runtime.CppTest.*
       - name: Report to CodeCov
         uses: codecov/codecov-action@v2.1.0
         with:
