--- a/.github/workflows/py-tests.yml
+++ b/.github/workflows/py-tests.yml
@@ -57,7 +57,7 @@ jobs:
         if: ${{ runner.os == 'Linux' }}
       - name: Run Python tests
         run: |
-          ./gradlew test --tests org.lflang.tests.runtime.PythonTest.* --tests org.lflang.tests.lsp.LspTests.lspWithDependenciesTestPython
+          ./gradlew test --tests org.lflang.tests.runtime.PythonTest.*
       - name: Report to CodeCov
         uses: codecov/codecov-action@v2.1.0
         with:
