--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,14 @@
         <!-- Version Properties -->
         <!-- Sync with build.gradle -->
         <commonsCliVersion>1.4</commonsCliVersion>
-        <!-- Note that this version is forced upon us by https://github.com/JetBrains/kotlin-eclipse -->
+        <!-- Note that this version is tied to our version of Gradle -->
         <kotlinVersion>1.6.10</kotlinVersion>
         <lsp4jVersion>0.12.0</lsp4jVersion>
         <mwe2LaunchVersion>2.12.1</mwe2LaunchVersion>
         <!-- When the Eclipse p2 site is updated to a new version of Eclipse, then update the xtextVersion. -->
         <xtextVersion>2.25.0</xtextVersion>
         <tychoVersion>2.3.0</tychoVersion>
+        <runtimeVersion>3.23.0</runtimeVersion>
 
         <!-- Maven only properties -->
         <maven.compiler.source>11</maven.compiler.source>
