--- a/.github/workflows/benchmark-tests.yml
+++ b/.github/workflows/benchmark-tests.yml
@@ -33,14 +33,17 @@ jobs:
         run: |
           python3 benchmark/runner/run_benchmark.py -m test_mode=True iterations=1 benchmark="glob(*)" target=lf-c,lf-c-unthreaded
         if: ${{ inputs.target == 'C' }}
-      - name: Setup C++ build environment
+      - name: Compile reactor-cpp once and reuse for all benchmarks
         run: |
-          ./bin/lfc test/Cpp/src/Minimal.lf
-          echo "LD_LIBRARY_PATH=$GITHUB_WORKSPACE/test/Cpp/lib" >> $GITHUB_ENV
+          mkdir -p reactor-cpp/build
+          cd reactor-cpp/build
+          cmake -DCMAKE_INSTALL_PREFIX=../install ../../org.lflang/src/lib/cpp/reactor-cpp
+          make install
+          echo "LD_LIBRARY_PATH=$GITHUB_WORKSPACE/reactor-cpp/install/lib" >> $GITHUB_ENV
         if: ${{ inputs.target == 'Cpp' }}
       - name: Test C++ benchmarks
         run: |
-          python3 benchmark/runner/run_benchmark.py -m test_mode=True iterations=1 benchmark="glob(*)" target=lf-cpp iterations=1 target.params.extra_args="[--external-runtime-path, ${GITHUB_WORKSPACE}/test/Cpp]"
+          python3 benchmark/runner/run_benchmark.py -m test_mode=True iterations=1 benchmark="glob(*)" target=lf-cpp iterations=1 target.params.extra_args="[--external-runtime-path, ${GITHUB_WORKSPACE}/reactor-cpp/install]"
         if: ${{ inputs.target == 'Cpp' }}
       - name: Setup Rust
         uses: ATiltedTree/setup-rust@v1
