--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
 
   # Run the C benchmark tests. 
   c-benchmark-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/benchmark-tests.yml@master
+    uses: lf-lang/benchmarks/.github/workflows/benchmark-tests.yml@master
     with:
       target: 'C'
 
@@ -54,7 +54,7 @@ jobs:
   
   # Run the C++ benchmark tests.
   cpp-benchmark-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/benchmark-tests.yml@master
+    uses: lf-lang/benchmarks/.github/workflows/benchmark-tests.yml@master
     with:
       target: 'Cpp'
 
@@ -72,7 +72,7 @@ jobs:
 
   # Run the Rust benchmark tests.
   rs-benchmark-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/benchmark-tests.yml@master
+    uses: lf-lang/benchmarks/.github/workflows/benchmark-tests.yml@master
     with:
       target: 'Rust'
 
