--- a/.github/workflows/c-tests.yml
+++ b/.github/workflows/c-tests.yml
@@ -55,7 +55,11 @@ jobs:
         if: ${{ runner.os == 'macOS' || runner.os == 'Linux' }}
       - name: Build RTI docker image
         uses: ./.github/actions/build-rti-docker
-        if: ${{ runner.os == 'Linux' }} 
+        if: ${{ runner.os == 'Linux' }}
+      - name: Setup ROS2
+        uses: ros-tooling/setup-ros@0.3
+        with:
+          required-ros-distributions: galactic
       - name: Perform tests for C target with default scheduler
         run: |
           ./gradlew test --tests org.lflang.tests.runtime.CTest.* --tests org.lflang.tests.lsp.LspTests.lspWithDependenciesTestC
