--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,3 +83,7 @@ jobs:
   # Run the TypeScript integration tests.
   ts-tests:
     uses: lf-lang/lingua-franca/.github/workflows/ts-tests.yml@master
+
+  # Run the serialization tests
+  serialization-tests:
+      uses: lf-lang/lingua-franca/.github/workflows/serialization-tests.yml@ros2-ccpp-tests
