Added back coreutils

--- a/.github/workflows/c-tests.yml
+++ b/.github/workflows/c-tests.yml
@@ -41,6 +41,10 @@ jobs:
           path: org.lflang/src/lib/c/reactor-c
           ref: ${{ inputs.runtime-ref }}
         if: ${{ inputs.runtime-ref }}
+      - name: Install dependencies OS X
+        run: |
+          brew install coreutils
+        if: ${{ runner.os == 'macOS' }}
       - name: Install RTI
         uses: ./.github/actions/install-rti
         if: ${{ runner.os == 'macOS' || runner.os == 'Linux' }}
